Revision history for {{$dist->name}}

{{$NEXT}}
    ** PLEASE CONSIDER USING EMAIL-SENDER INSTEAD **

    - Fixed oddity with multiple $VERSION variables.  Thanks @Pavel109. GH #2

0.901     2016-06-29
    ** PLEASE CONSIDER USING EMAIL-SENDER INSTEAD **

    - Fixed a bug introduced in 0.900 where the auth method call pointed to the
    wrong scope.

0.900003  2016-06-10
    ** PLEASE CONSIDER USING EMAIL-SENDER INSTEAD **

    - Fixed conditional dependencies
    - Fixed locale specific testing
    - Fixed the Changes file
    - Added some git helper files for the repo
    - Reorganized the PM files into the lib directory
    - Auto-generate MANIFEST using MANIFEST.SKIP from here on
    - Ensure all files EOL with \n rather than any combination of \n and \r\n
    - Renamed many undocumented/private functions to names beginning with _
    - Added many, many tests for coverage and to prevent regressions
    - Updated Config.PL to modernize.
    - Lazily load Win32API::Registry for ::CType::Win32

0.8.23  2014-07-15
    - fixed problems with long subjects containing accentuated characters
    - fixed problems with IO::Socket::SSL
    - trims addresses passed in an array (per request)
    - changed licence per request from Fedora
    - fix to allow very long passwords
    - fix error in TestServer()

0.8.22  2012-12-12
    - minor fixes

0.8.21  2012-05-27
    - fixed the case in the header names (Content-type -> Content-Type)
    - fixed the encoding of non-ascii stuff in headers (RFC 2047)
    - fixed using the ctype even for body with MailFile

0.8.16  2008-07-15
    - fixed unwanted modification of the parameter hash

0.8.13  2006-02-25
    - fixed incorrect handling of singlequotes in mail addresses
    - add SMTP commands now sent in uppercase
    - removing the port number if the local name is taken from $ENV{HTTP_HOST}
    - improved getting the current user name
    - can accept authid and authpwd already encoded to base64